time to step forward

--- a/test.html
+++ b/test.html
@@ -3,11 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<link href="css/ui.css" rel="stylesheet"/>
-		<title>weGGe</title>
+		<title>weGGe VIEWER TEST</title>
 	</head>
 	
-	<body>
-	
+	<body>	
 	</body>
 
 	<script src="lib/three.min.js" language="javascript"></script>	
@@ -31,16 +30,15 @@
 
 	<script src="js/ui/ui.js" language="javascript"></script>
 	<script src="js/ui/viewer.js" language="javascript"></script>
-	<script src="js/ui/creator.js" language="javascript"></script>
 	
 	<script>
 	
 		$(function () {
-			var creator = new weggeCreator();
-			creator.startLoadingLevel(1);
+			var viewer = new weggeViewer();
+			viewer.startLoadingLevel(1);
 		});
 		
 	</script>
-	
+		
 </html>
 
