--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 	
 	</body>
 
-	<script src="lib/three.min.js" language="javascript"></script>	
+	<script src="lib/three.js" language="javascript"></script>	
 	<script src="lib/stats.min.js" language="javascript"></script>
-	<script src="/ghobok/lib/jquery.min.js" language="javascript"></script>
-	<script src="/ghobok/lib/three.js" language="javascript"></script>	
+	<script src="lib/jquery.min.js" language="javascript"></script>
 	
 	<script src="js/tools.js" language="javascript"></script>
 	<script src="js/host3d.js" language="javascript"></script>
