lights in weGGe

--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 	<script src="lib/three.js" language="javascript"></script>	
 	<script src="lib/stats.min.js" language="javascript"></script>
 	<script src="lib/jquery.min.js" language="javascript"></script>
+	<script src="lib/helvetiker_regular.typeface.js" language="javascript"></script>
 	
 	<script src="js/tools.js" language="javascript"></script>
 	<script src="js/host3d.js" language="javascript"></script>
 	<script src="js/controls.js" language="javascript"></script>
 	<script src="js/textSprites.js" language="javascript"></script>
 	
-	<script src="js/nodes/node.js" language="javascript"></script>
-	<script src="js/nodes/level.js" language="javascript"></script>
+	<script src="js/nodes/node.js" language="javascript"></script>	
 	<script src="js/nodes/objects/object.js" language="javascript"></script>	
+	<script src="js/nodes/level.js" language="javascript"></script>
 	<script src="js/nodes/objects/axis.js" language="javascript"></script>	
 	<script src="js/nodes/objects/plane.js" language="javascript"></script>
-	<script src="js/nodes/objects/sphere.js" language="javascript"></script>
+	<script src="js/nodes/objects/basic.js" language="javascript"></script>
+	<script src="js/nodes/objects/lights.js" language="javascript"></script>
 	
 	<script src="js/nodes/resources/resources.js" language="javascript"></script>
 	<script src="js/nodes/resources/resource.js" language="javascript"></script>
