some messing around

--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
 	</body>
 
 	<script src="lib/three.js" language="javascript"></script>	
+	<script src='lib/threex.volumetricspotlightmaterial.js'></script>
+	<script src='lib/threex.volumetricspotlightmesh.js'></script>
+	<script src='lib/threex.spaceships.js'></script>
+	<script src='lib/threex.grass.js'></script>
+	<script src='lib/MTLLoader.js'></script>
+	<script src='lib/OBJMTLLoader.js'></script>
+
 	<script src="lib/stats.min.js" language="javascript"></script>
 	<script src="lib/jquery.min.js" language="javascript"></script>
 	<script src="lib/helvetiker_regular.typeface.js" language="javascript"></script>
+	<script src="lib/transformControls.js" language="javascript"></script>
 	
 	<script src="js/tools.js" language="javascript"></script>
 	<script src="js/host3d.js" language="javascript"></script>
@@ -27,13 +35,14 @@
 	<script src="js/nodes/objects/plane.js" language="javascript"></script>
 	<script src="js/nodes/objects/basic.js" language="javascript"></script>
 	<script src="js/nodes/objects/lights.js" language="javascript"></script>
+	<script src="js/nodes/objects/spaceship.js" language="javascript"></script>
+	<script src="js/nodes/objects/grass.js" language="javascript"></script>
 	
 	<script src="js/nodes/resources/resources.js" language="javascript"></script>
 	<script src="js/nodes/resources/resource.js" language="javascript"></script>
 	<script src="js/nodes/resources/texture.js" language="javascript"></script>
 
-	<script src="js/nodes/helpers/axisHelper.js" language="javascript"></script>
-	<script src="lib/transformControls.js" language="javascript"></script>
+	
 	
 	<script src="js/ui/ui.js" language="javascript"></script>
 	<script src="js/ui/viewer.js" language="javascript"></script>
