not a good day but who cares?

--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<link href="css/ui.css" rel="stylesheet"/>
+		<link href="ui.css" rel="stylesheet"/>
 		<title>weGGe</title>
 	</head>
 	
-	<body>
-	
-	</body>
+	<body></body>
 
 	<script src="lib/three.js" language="javascript"></script>	
 	<script src='lib/threex.volumetricspotlightmaterial.js'></script>
@@ -41,11 +39,10 @@
 	<script src="js/nodes/resources/resources.js" language="javascript"></script>
 	<script src="js/nodes/resources/resource.js" language="javascript"></script>
 	<script src="js/nodes/resources/texture.js" language="javascript"></script>
-
-	
 	
 	<script src="js/ui/ui.js" language="javascript"></script>
 	<script src="js/ui/viewer.js" language="javascript"></script>
+	<script src="js/ui/resources.js" language="javascript"></script>
 	<script src="js/ui/creator.js" language="javascript"></script>
 	
 	<script>
