--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 	<script src="js/nodes/objects/lights.js" language="javascript"></script>
 	<script src="js/nodes/objects/spaceship.js" language="javascript"></script>
 	<script src="js/nodes/objects/grass.js" language="javascript"></script>
+	<script src="js/nodes/objects/mesh.js" language="javascript"></script>
 	
 	<script src="js/nodes/resources/resources.js" language="javascript"></script>
 	<script src="js/nodes/resources/resource.js" language="javascript"></script>
 	<script src="js/nodes/resources/texture.js" language="javascript"></script>
+	<script src="js/nodes/resources/model.js" language="javascript"></script>
 	
 	<script src="js/ui/ui.js" language="javascript"></script>
 	<script src="js/ui/viewer.js" language="javascript"></script>
@@ -55,4 +57,3 @@
 	</script>
 	
 </html>
-
