--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<link href="css/ui.css" rel="stylesheet"/>
+		<link href="ui.css" rel="stylesheet"/>
 		<title>weGGe VIEWER TEST</title>
 	</head>
 	
