--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	<script src="js/nodes/node.js" language="javascript"></script>	
 	<script src="js/nodes/objects/object.js" language="javascript"></script>	
 	<script src="js/nodes/level.js" language="javascript"></script>
+	<script src="js/nodes/objects/group.js" language="javascript"></script>
 	<script src="js/nodes/objects/axis.js" language="javascript"></script>	
 	<script src="js/nodes/objects/plane.js" language="javascript"></script>
 	<script src="js/nodes/objects/basic.js" language="javascript"></script>
