--- a/test.html
+++ b/test.html
@@ -14,6 +14,9 @@
 	<script src="lib/jquery.min.js" language="javascript"></script>
 	<script src="lib/three.min.js" language="javascript"></script>	
 	<script src="lib/helvetiker_regular.typeface.js" language="javascript"></script>
+	<script src='lib/MTLLoader.js'></script>
+	<script src='lib/OBJMTLLoader.js'></script>
+	<script src='lib/threex.spaceships.js'></script>
 	
 	<script src="lib/physi.js" language="javascript"></script>	
 	<script>
@@ -31,6 +34,9 @@
 	<script src="js/nodes/node.js" language="javascript"></script>
 	<script src="js/nodes/objects/object.js" language="javascript"></script>
 	<script src="js/nodes/level.js" language="javascript"></script>
+	<script src="js/nodes/objects/group.js" language="javascript"></script>
+	<script src="js/nodes/objects/spaceship.js" language="javascript"></script>
+	<script src="js/nodes/objects/skybox.js" language="javascript"></script>
 	<script src="js/nodes/objects/axis.js" language="javascript"></script>	
 	<script src="js/nodes/objects/basic.js" language="javascript"></script>
 	<script src="js/nodes/objects/lights.js" language="javascript"></script>
