actors, ladies and gentlemen

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
 	<script src="js/nodes/resources/texture.js" language="javascript"></script>
 	<script src="js/nodes/resources/model.js" language="javascript"></script>
 	
+	<script src="js/nodes/actors/actor.js" language="javascript"></script>
+	<script src="js/nodes/actors/clickable.js" language="javascript"></script>
+	<script src="js/nodes/actors/moving.js" language="javascript"></script>
+	<script src="js/nodes/actors/turning.js" language="javascript"></script>
+	<script src="js/nodes/actors/spawn.js" language="javascript"></script>
+	
 	<script src="js/ui/ui.js" language="javascript"></script>
 	<script src="js/ui/viewer.js" language="javascript"></script>
 	<script src="js/ui/resources.js" language="javascript"></script>
