--- a/test.html
+++ b/test.html
@@ -46,7 +46,13 @@
 	<script src="js/nodes/resources/resource.js" language="javascript"></script>
 	<script src="js/nodes/resources/model.js" language="javascript"></script>
 	<script src="js/nodes/resources/texture.js" language="javascript"></script>
-
+	<script src="js/nodes/actors/actor.js" language="javascript"></script>
+	<script src="js/nodes/actors/clickable.js" language="javascript"></script>
+	<script src="js/nodes/actors/mouse.js" language="javascript"></script>
+	<script src="js/nodes/actors/moving.js" language="javascript"></script>
+	<script src="js/nodes/actors/turning.js" language="javascript"></script>
+	<script src="js/nodes/actors/spawn.js" language="javascript"></script>
+	
 	<script src="js/ui/ui.js" language="javascript"></script>
 	<script src="js/ui/viewer.js" language="javascript"></script>
 	
@@ -54,6 +60,10 @@
 	
 		$(function () {
 			var viewer = new weggeViewer();
+			var cookie = _readCookie("level");
+			if (cookie !== null) {
+				viewer.startLoadingLevel(cookie);
+			}
 		});
 		
 	</script>
