--- a/pong.html
+++ b/pong.html
@@ -41,6 +41,7 @@
 	<script src="js/nodes/resources/resource.js" language="javascript"></script>
 	<script src="js/nodes/resources/model.js" language="javascript"></script>
 	<script src="js/nodes/resources/texture.js" language="javascript"></script>
+	<script src="js/nodes/actors/actor.js" language="javascript"></script>
 
 	<script src="js/ui/ui.js" language="javascript"></script>
 	<script src="js/ui/viewer.js" language="javascript"></script>
@@ -149,7 +150,10 @@
 		$(function () {
 			viewer = new weggeViewer();
 			viewer.onLevelLoaded = initEventHandling;
-			viewer.startLoadingLevel(24);
+			var cookie = _readCookie("level");
+			if (cookie !== null) {
+				viewer.startLoadingLevel(cookie);
+			}
 			
 		});
 		
