--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<body></body>
 
-	<script src="lib/three.min.js" language="javascript"></script>	
+	<script src="lib/three.js" language="javascript"></script>	
 	<script src='lib/threex.volumetricspotlightmaterial.js'></script>
 	<script src='lib/threex.volumetricspotlightmesh.js'></script>
 	<script src='lib/threex.spaceships.js'></script>
