--- a/test.html
+++ b/test.html
@@ -13,7 +13,11 @@
 	<script src="lib/stats.min.js" language="javascript"></script>
 	<script src="lib/jquery.min.js" language="javascript"></script>
 	<script src="lib/three.min.js" language="javascript"></script>	
+	<script src='lib/threex.volumetricspotlightmaterial.js'></script>
+	<script src='lib/threex.volumetricspotlightmesh.js'></script>
 	<script src="lib/helvetiker_regular.typeface.js" language="javascript"></script>
+	<script src='lib/threex.keyboardstate.js'></script>
+	<script src='lib/threex.grass.js'></script>
 	<script src='lib/MTLLoader.js'></script>
 	<script src='lib/OBJMTLLoader.js'></script>
 	<script src='lib/threex.spaceships.js'></script>
@@ -42,6 +46,7 @@
 	<script src="js/nodes/objects/lights.js" language="javascript"></script>
 	<script src="js/nodes/objects/plane.js" language="javascript"></script>
 	<script src="js/nodes/objects/mesh.js" language="javascript"></script>
+	<script src="js/nodes/objects/grass.js" language="javascript"></script>
 	<script src="js/nodes/resources/resources.js" language="javascript"></script>
 	<script src="js/nodes/resources/resource.js" language="javascript"></script>
 	<script src="js/nodes/resources/model.js" language="javascript"></script>
