bugfixes and more

--- a/test.html
+++ b/test.html
@@ -49,6 +49,7 @@
 	<script src="js/nodes/objects/grass.js" language="javascript"></script>
 	<script src="js/nodes/resources/resources.js" language="javascript"></script>
 	<script src="js/nodes/resources/resource.js" language="javascript"></script>
+	<script src="js/nodes/resources/material.js" language="javascript"></script>
 	<script src="js/nodes/resources/model.js" language="javascript"></script>
 	<script src="js/nodes/resources/texture.js" language="javascript"></script>
 	<script src="js/nodes/actors/actor.js" language="javascript"></script>
