--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	
 	<script src="js/nodes/resources/resources.js" language="javascript"></script>
 	<script src="js/nodes/resources/resource.js" language="javascript"></script>
+	<script src="js/nodes/resources/material.js" language="javascript"></script>
 	<script src="js/nodes/resources/texture.js" language="javascript"></script>
 	<script src="js/nodes/resources/model.js" language="javascript"></script>
 	
