--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 	<script src="js/nodes/resources/resources.js" language="javascript"></script>
 	<script src="js/nodes/resources/resource.js" language="javascript"></script>
 	<script src="js/nodes/resources/material.js" language="javascript"></script>
+	<script src="js/nodes/resources/phy_material.js" language="javascript"></script>	
 	<script src="js/nodes/resources/texture.js" language="javascript"></script>
 	<script src="js/nodes/resources/model.js" language="javascript"></script>
 	
@@ -59,6 +60,7 @@
 	<script src="js/nodes/actors/moving.js" language="javascript"></script>
 	<script src="js/nodes/actors/turning.js" language="javascript"></script>
 	<script src="js/nodes/actors/spawn.js" language="javascript"></script>
+	<script src="js/nodes/actors/physics.js" language="javascript"></script>
 	
 	<script src="js/ui/ui.js" language="javascript"></script>
 	<script src="js/ui/viewer.js" language="javascript"></script>
