--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 	<script src="js/nodes/objects/grass.js" language="javascript"></script>
 	<script src="js/nodes/objects/mesh.js" language="javascript"></script>
 	<script src="js/nodes/objects/skybox.js" language="javascript"></script>
+	<script src="js/nodes/objects/lines.js" language="javascript"></script>
+	<script src="js/nodes/objects/dynamic.js" language="javascript"></script>
 	
 	<script src="js/nodes/resources/resources.js" language="javascript"></script>
 	<script src="js/nodes/resources/resource.js" language="javascript"></script>
