--- a/test.html
+++ b/test.html
@@ -47,9 +47,12 @@
 	<script src="js/nodes/objects/plane.js" language="javascript"></script>
 	<script src="js/nodes/objects/mesh.js" language="javascript"></script>
 	<script src="js/nodes/objects/grass.js" language="javascript"></script>
+	<script src="js/nodes/objects/lines.js" language="javascript"></script>
+	
 	<script src="js/nodes/resources/resources.js" language="javascript"></script>
 	<script src="js/nodes/resources/resource.js" language="javascript"></script>
 	<script src="js/nodes/resources/material.js" language="javascript"></script>
+	<script src="js/nodes/resources/phy_material.js" language="javascript"></script>
 	<script src="js/nodes/resources/model.js" language="javascript"></script>
 	<script src="js/nodes/resources/texture.js" language="javascript"></script>
 	<script src="js/nodes/actors/actor.js" language="javascript"></script>
@@ -58,6 +61,7 @@
 	<script src="js/nodes/actors/moving.js" language="javascript"></script>
 	<script src="js/nodes/actors/turning.js" language="javascript"></script>
 	<script src="js/nodes/actors/spawn.js" language="javascript"></script>
+	<script src="js/nodes/actors/physics.js" language="javascript"></script>
 	
 	<script src="js/ui/ui.js" language="javascript"></script>
 	<script src="js/ui/viewer.js" language="javascript"></script>
